2006-03-03 Kimmo
 PATCH: [ 1441387 ] Improve File Encoding dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-03-02 Tim
 PATCH: [ 1437770 ] Icons for 'Generate Patch' and 'Generate Report'
  Src: MainFrm.cpp Merge.rc resource.h
  Src/res new files: patch.bmp report.bmp

2006-03-02 Kimmo
 PATCH: [ 1441124 ] Improve filter test dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-03-01 Kimmo
 PATCH: [ 1424535 ] Czech Translation, Submitted by Jan Hryz
  Improve unpacker selection dialog and new filter location selection dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-03-01 Tim
 PATCH: [ 1438233 ] New icons for 'notequalfile', 'lfile' and 'rfile'
  Src/res: lfile.ico notequalfile.ico rfile.ico

2006-03-01 Kimmo
 PATCH: [ 1436855 ] Typo in lang files (change pactch to patch)
  Src/Languages/*: Merge*.rc
 BUG: [ 1440774 ] Test button for file filters enabled for no filter
  Fix submitted by Gal Hammer
  Src: FileFiltersDlg.cpp
 PATCH: [ 1395847 ] Integration with Rational ClearCase
  Submitted by Gal Hammer
  Src: MainFrm.cpp MainFrm.h Merge.h MergeArgs.cpp MergeDoc.cpp MergeDoc.h
  Src/Common: coretools.cpp coretools.h

2006-02-28 Perry
 BUG: [ 1439360 ] Native languages sometimes suppressed in Unicode Build
 Add note to CLanguageSelect::GetNativeLanguageNameString
  explaining why codepage check is done even for Unicode build.
 Src/Common: LanguageSelect.cpp

2006-02-27 Perry
 BUG: [ 1439350 ] Russian language name in LanguageSelect?
  Src/Common: LanguageSelect.cpp

2006-02-26 Perry
 PATCH: [ 1435470 ] Remove CTextFile
  Src: Merge.dsp
  Deleted Src\Common: textfile.cpp textfile.h
 PATCH: [ 1439229 ] Fix CMergeDoc::SanityCheckD not to dereference illegal lines
 BUG: [ 1438390 ] Crash when editting the attached files
  Src: MergeDoc.cpp
 PATCH: [ 1434007 ] Move source control code out of MainFrm.cpp
  Src: MainFrm.cpp MainFrm.h Merge.dsp
  New Src: SourceControl.cpp

2006-02-24 Kimmo